--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="container">
         <nav class="navbar navbar-expand-lg p0_custom ">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="images/logo.png" class="img-fluid logo" alt="luca"></a>
+        <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="img-fluid logo" alt="luca"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#header_nav" aria-controls="header_nav" aria-expanded="false" aria-label="Toggle navigation">
           <!-- <span class="navbar-toggler-icon"></span> -->
           <span class="nav_custom_icon"></span>
