--- a/index.html
+++ b/index.html
@@ -61,18 +61,42 @@
         <!-- slide 1 -->
         <div class="carousel-item active">
           <img src="images/slider_img.jpg" class="img-fluid" alt="luca">
+          <!-- hero slide caption start -->
+          <div class="carousel-caption d-none d-md-block c_s_caption">
+            <h5>Greatness - living innovation</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+          <!-- hero slide caption end --> 
         </div>
         <!-- slide 2 -->
         <div class="carousel-item">
           <img src="images/slider_img.jpg" class="img-fluid" alt="luca">
+          <!-- hero slide caption start -->
+          <div class="carousel-caption d-none d-md-block c_s_caption">
+            <h5>Greatness - living innovation</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+          <!-- hero slide caption end -->
         </div>
         <!-- slide 3 -->
         <div class="carousel-item">
           <img src="images/slider_img.jpg" class="img-fluid" alt="luca">
+          <!-- hero slide caption start -->
+          <div class="carousel-caption d-none d-md-block c_s_caption">
+            <h5>Greatness - living innovation</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
+          <!-- hero slide caption end -->
         </div>
         <!-- slide 4 -->
         <div class="carousel-item">
           <img src="images/slider_img.jpg" class="img-fluid" alt="luca">
+          <!-- hero slide caption start -->
+          <div class="carousel-caption d-none d-md-block c_s_caption">
+            <h5>Greatness - living innovation</h5>
+            <p>Some representative placeholder content for the forth slide.</p>
+          </div>
+          <!-- hero slide caption end -->
         </div>
       </div>
     </div>
@@ -81,7 +105,8 @@
 <!-- hero end --> 
 
 <!-- service start -->
-<section class="service">
+<!-- section 01 start -->
+<section class="service d-lg-block d-none">
     <div class="container">
       <div id="slider_2" class="carousel slide slider_two" data-bs-ride="carousel">
         <!-- indicator start  -->
@@ -94,11 +119,120 @@
           </ul>
         </div>
 
-        <div class="carousel-indicators c_indicators_custom c_i_custom2 d-lg-none d-block">
+        <!-- <div class="carousel-indicators c_indicators_custom c_i_custom2 d-lg-none d-block">
             <button type="button" data-bs-target="#slider_2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#slider_2" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#slider_2" data-bs-slide-to="2" aria-label="Slide 3"></button>
             <button type="button" data-bs-target="#slider_2" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        </div> -->
+        <!-- indicator end  -->
+        <!-- inner -->
+        <div class="carousel-inner">
+          <!-- service slide 1 start -->
+          <div class="carousel-item active">
+            <div class="row">
+              <div class="col-lg-4 col-sm-6">
+                <div class="s_service">
+                  <h1>blandit <br> tincidunt metus</h1>
+                  <p>Proin eget tortor malesuada, dapibus mi pretium, semper diam. Donec in rutrum turpis. Duis eu faucibus est. Aliquam vitae nibh vestibulum, rhoncus augue eu, venenatis erat. Vivamus ipsum metus.</p>
+                  <a href="#"><div class="s_circle"></div></a>
+                </div>
+              </div>
+              <div class="col-lg-4 col-sm-6">
+                <div class="s_service l_c_service">
+                  <h1>metus <br> Pellentesque</h1>
+                  <p>Proin eget tortor malesuada, dapibus mi pretium, semper diam. Donec in rutrum turpis. Duis eu faucibus est. Aliquam vitae nibh vestibulum, rhoncus augue eu, venenatis erat. Vivamus ipsum metus.</p>
+                  <a href="#"><div class="s_circle"></div></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- service slide 1 end -->
+          <!-- service slide 2 start -->
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col-lg-4 col-sm-6">
+                <div class="s_service">
+                  <h1>blandit <br> tincidunt metus</h1>
+                  <p>Proin eget tortor malesuada, dapibus mi pretium, semper diam. Donec in rutrum turpis. Duis eu faucibus est. Aliquam vitae nibh vestibulum, rhoncus augue eu, venenatis erat. Vivamus ipsum metus.</p>
+                  <a href="#"><div class="s_circle"></div></a>
+                </div>
+              </div>
+              <div class="col-lg-4 col-sm-6">
+                <div class="s_service l_c_service">
+                  <h1>metus <br> Pellentesque</h1>
+                  <p>Proin eget tortor malesuada, dapibus mi pretium, semper diam. Donec in rutrum turpis. Duis eu faucibus est. Aliquam vitae nibh vestibulum, rhoncus augue eu, venenatis erat. Vivamus ipsum metus.</p>
+                  <a href="#"><div class="s_circle"></div></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- service slide 2 end -->
+          <!-- service slide 3 start -->
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col-lg-4 col-sm-6">
+                <div class="s_service">
+                  <h1>blandit <br> tincidunt metus</h1>
+                  <p>Proin eget tortor malesuada, dapibus mi pretium, semper diam. Donec in rutrum turpis. Duis eu faucibus est. Aliquam vitae nibh vestibulum, rhoncus augue eu, venenatis erat. Vivamus ipsum metus.</p>
+                  <a href="#"><div class="s_circle"></div></a>
+                </div>
+              </div>
+              <div class="col-lg-4 col-sm-6">
+                <div class="s_service l_c_service">
+                  <h1>metus <br> Pellentesque</h1>
+                  <p>Proin eget tortor malesuada, dapibus mi pretium, semper diam. Donec in rutrum turpis. Duis eu faucibus est. Aliquam vitae nibh vestibulum, rhoncus augue eu, venenatis erat. Vivamus ipsum metus.</p>
+                  <a href="#"><div class="s_circle"></div></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- service slide 3 end -->
+          <!-- service slide 4 start -->
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col-lg-4 col-sm-6">
+                <div class="s_service">
+                  <h1>blandit <br> tincidunt metus</h1>
+                  <p>Proin eget tortor malesuada, dapibus mi pretium, semper diam. Donec in rutrum turpis. Duis eu faucibus est. Aliquam vitae nibh vestibulum, rhoncus augue eu, venenatis erat. Vivamus ipsum metus.</p>
+                  <a href="#"><div class="s_circle"></div></a>
+                </div>
+              </div>
+              <div class="col-lg-4 col-sm-6">
+                <div class="s_service l_c_service">
+                  <h1>metus <br> Pellentesque</h1>
+                  <p>Proin eget tortor malesuada, dapibus mi pretium, semper diam. Donec in rutrum turpis. Duis eu faucibus est. Aliquam vitae nibh vestibulum, rhoncus augue eu, venenatis erat. Vivamus ipsum metus.</p>
+                  <a href="#"><div class="s_circle"></div></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- service slide 4 end -->
+
+        </div>
+      </div>
+    </div>
+</section>
+<!-- section 01 end -->
+<!-- section 02 start -->
+<section class="service d-lg-none d-block">
+    <div class="container">
+      <div id="slider_2_ind" class="carousel slide slider_two" data-bs-ride="carousel">
+        <!-- indicator start  -->
+        <!-- <div class="carousel-indicators c_indicators_custom c_i_custom2 d-lg-block d-none">
+          <ul>
+            <li><button type="button" data-bs-target="#slider_2_ind" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button></li>
+            <li><button type="button" data-bs-target="#slider_2_ind" data-bs-slide-to="1" aria-label="Slide 2"></button></li>
+            <li><button type="button" data-bs-target="#slider_2_ind" data-bs-slide-to="2" aria-label="Slide 3"></button></li>
+            <li><button type="button" data-bs-target="#slider_2_ind" data-bs-slide-to="3" aria-label="Slide 4"></button>  </li>
+          </ul>
+        </div> -->
+
+        <div class="carousel-indicators c_indicators_custom c_i_custom2 d-lg-none d-block">
+            <button type="button" data-bs-target="#slider_2_ind" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#slider_2_ind" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#slider_2_ind" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#slider_2_ind" data-bs-slide-to="3" aria-label="Slide 4"></button>
         </div>
         <!-- indicator end  -->
         <!-- inner -->
@@ -188,6 +322,7 @@
       </div>
     </div>
 </section>
+<!-- section 02 end -->
 <!-- service end -->
 
 <!-- product start -->
@@ -384,7 +519,7 @@
     <div class="row justify-content-center">
       <div class="copyright">
         <div class="copy_circle"></div>
-        <p>Copyrig BlazRobar.com 2014</p>
+        <p>Copyrig <a href="index.html">BlazRobar.com</a> 2014</p>
       </div>
     </div>
   </div>
